# wiregraph

./: .gitignore  CMakeLists.txt  README.md  icons.qrc
assets/: wiregraph.desktop
src/: main.cpp
src/Models/: device_model.cpp  device_model.hpp
src/Pipewire/: database.cpp  database.hpp  device.cpp  device.hpp  item.cpp  item.hpp  pipewire.cpp  pipewire.hpp
src/qml/: main.qml
